# kulagina_anastasia_megashool

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.sh  start.sh
app/: app.py  config.py  main.py
app/endpoints/: request.py
app/schemas/: request.py
app/service/: web_query_service.py
